--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -29,6 +29,7 @@
 section.main-banner {
 	width: 100%;
 	float: left;
+	margin-bottom: 10px;
 	img {
 		width: 100%;
 	}
@@ -37,13 +38,14 @@ section.about {
 	width: 100%;
 	float: left;
 	position: relative;
+	border-top: 2px solid #fff;
 	.blue-title {
 		width: auto;
 		position: absolute;
 		background-color: $color-blue;
 		border: 2px solid #fff;
 		color: #fff;
-		top: 0;
+		top: -2px;
 		left: 0;
 		z-index: 20;
 		padding: 10px 20px;
@@ -69,14 +71,16 @@ section.about {
 	.info {
 		width: 90%;
 		margin: 0 auto;
-		color: #fff;
-		position: absolute;
+		color: $color-blue;
+		
 		z-index: 30;
 		@media screen and (min-width: $tabwidth) {
 			position: absolute;
 			width: 60%;
 			top: 10%;
-			left: 5%;
+			left: 150px;
+			position: absolute;
+			color: #fff;
 		}
 		@media screen and (min-width: $deskwidth) {
 			width: 30%;
@@ -85,6 +89,7 @@ section.about {
 		h2 {
 			text-transform: uppercase;
 			font-size: 30px;
+			line-height: 1;
 		}
 	}
 }
@@ -93,28 +98,40 @@ section.third-section {
 	float: left;
 	position: relative;
 	border-top: 8px solid $color-pink;
-	display: flex;
-	flex-direction: column;
-	padding: 100px 0;
-	@media screen and (min-width: $tabwidth) {
-		flex-direction: row;
-		justify-content: space-evenly;
-		align-items: stretch;
-	}
+	padding: 50px 0;
+	z-index: 10;
 	@media screen and (min-width: $deskwidth) {
 
 	}
+	.flex {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+		position: relative;
+		z-index: 3;
+		@media screen and (min-width: $tabwidth) {
+			flex-direction: row;
+			justify-content: space-evenly;
+			align-items: stretch;
+		}
+	}
 	.item {
-		flex-basis: 100%;
+		flex-basis: 80%;
+		width: 80%;
 		text-align: center;
 		transform: scale(1);
 		@include transition(all ease .2s);
+		margin: 20px auto;
+		position: relative;
+
 		@media screen and (min-width: $tabwidth) {
 			flex-basis: 20%;
 		}
 		&:hover {
 			transform: scale(1.03);
 		}
+
 		.image {
 			width: 100%;
 			position: relative;
@@ -149,6 +166,19 @@ section.third-section {
 		.desc {
 			font-size: 14px;
 			color: #000;
+		}
+		
+	}
+	.bg-image {
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+		img {
+			width: 100%;
 		}
 	}
 }
