--- a/assets/sass/typography/_headings.scss
+++ b/assets/sass/typography/_headings.scss
@@ -21,3 +21,13 @@ header.entry-header {
 		margin: 0;
 	}
 }
+.artisit {
+	h1 {
+		border-bottom: 1px solid $color-blue;
+		margin: 0.83em 0 0 0;
+	}
+	h2 {
+		color: $color-pink;
+		margin: 5px 0 0 0;
+	}
+}
