--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -21,6 +21,8 @@ $color__border-abbr: #666;
 
 $color-black: #000;
 $color-grey: #ebe9ec;
+$color-light-grey: #F4F4F4;
+$color-dark-grey: #E8E8E8;
 $color-blue: #4497c9;
 $color-pink: #b738a1;
 $color-dark-blue: #2C3343;
