fix site map and footer

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -176,18 +176,22 @@ article {
 	width: 100%;
 	clear: both;
 }
-section.footer-nav {
-	padding: 40px 0;
+.footernav-wrap {
 	width: 100%;
 	text-align: center;
 	background-color: $color-blue;
+	overflow: hidden;
+}
+section.footer-nav {
+	padding: 40px 0;
+	width: 90%;
+	margin: 0 auto;
 	color: #fff;
 	display: flex;
 	flex-direction: column;
 	@media screen and (min-width: $tabwidth) {
 		flex-direction: row;
 		flex-wrap: wrap;
-		float: left;
 		text-align: left;
 		justify-content: space-evenly;
 	}
@@ -202,7 +206,7 @@ section.footer-nav {
 
 		@media screen and (min-width: $tabwidth) {
 			// flex: 0 0 18%;
-			flex-basis: 18%;
+			flex-basis: 14%;
 			margin: 0 20px ;
 		}
 		@media screen and (min-width: $deskwidth) {
